2003-02-11  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: Fix for building in different directory.

2003-02-10  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/sample/misc/xbm_cursor.rb: Use Gdk::Pixmap instead of Gdk::Bitmap.

2003-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkgc.c: Support GTK+-2.2.x.
	(Call rbgobj_add_abstract_but_create_instance_class() 
        because GdkGC changes as Abstract class in GTK+-2.2.x ... why?).
	
2003-02-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: Add Gtk::Widget#saved_state, #visible?, #focus?, 
	#region_intersect, #send_expose, #style_get_property, #accessible, 
	#child_focus, #child_notify, #freeze_child_notify, #child_visible?, #settings.
	Remove Gtk::Widget#set_app_paintable, #app_paintable?, composite_child?
	because they are defined as property variables.
	Gtk::Widget#event returns true or false not Integer.
	* src/rbgtkobject.c: Add Gtk::Object#type_name.

2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkaccelgroup.c: Remove Gtk::AccelGroup#connect_by_path.
	Use Gtk::AccelGroup#connect instead.
	Gtk::AccelGroup#connect need GLib::Closure instead of Proc object.
	Add Gtk::AccelGroup.from_accel_closure, Gtk::AccelGroup#disconnect.

2003-02-02  Geoff Youngs <g@intersect-uk.co.uk>

	* src/rbgdkgc.c: Fix Gdk::GC#set_clip_rectangle passed the wrong type
	to RVAL2BOXED.

2003-02-02  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkwidget.c: The argument of Gtk::Widget#create_pango_layout is now omittable.
	* src/rbgtkconstant.c: Update version information.
	* All files: Update copyright.

2003-01-31  Masao Mutoh  <mutoh@highway.ne.jp>

	* sample/misc/dndtreeview.rb: Add a sample.
	* sample/misc/dnd.rb: Modified.
	* src/rbgtkselectiondata.c: Fix problem to create object. 

2003-01-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkpixmap.c: Gdk::Pixmap#colormap_create_from_xpm_d, colormap_create_from_xpm: 
	Accept nil to 1st argument.

2003-01-23  Masao Mutoh  <mutoh@highway.ne.jp>
