@@ -1,3 +1,7 @@
+2003-02-13  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* extconf.rb: Use ../mkmf-gnome2.rb
+
 2003-02-11  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
 
 	* extconf.rb: Fix for building in different directory.
